<resources>
    <string name="app_name">mad2ex</string>
    <string name="onboard1_des">Your journey to a dream career starts here.Discover jobs, connect with professionals, and boost your career all in one place.</string>
    <string name="onboard2_des">Personalized job recommendations based on your profile.Save time by viewing jobs that align with your experience and career goals.</string>
    <string name="signIn_des">Do not have an account?</string>
    <string name="signup_des">Already have an account?</string>
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="btn_submit">Login</string>
    <string name="btn_register">Register</string>
    <string name="launch_btn">GO</string>
    <string name="onboard1_text">Welcome to WORKLINKER !</string>
    <string name="onboard2_text">Find Jobs That Match Your Skills</string>
    <string name="onboard1_btn">NEXT</string>
    <string name="onboard2_btn">GET STARTED</string>
    <string name="signin_text">Sign In</string>
    <string name="signup_text">Sign Up</string>
    <string name="signin_forgot">Forgot password ?</string>
    <string name="signin_register">Register</string>
    <string name="signup_login">Login</string>
    <string name="apply_text">Apply Now</string>
    <string name="descriptionbutton">Description</string>
    <string name="requirementbtn">Requirements</string>
    <string name="job_title">Job Description</string>
    <string name="job_text">A UI/UX Designer is a professional responsible for creating intuitive, aesthetically pleasing, and user-friendly digital interfaces. They focus on both the look (UI - User Interface) and feel (UX - User Experience) of a product, ensuring that users can easily navigate and interact with the product. UI/UX Designers conduct user research, develop wireframes and prototypes, and collaborate with developers to bring designs to life, with the goal of enhancing overall user satisfaction and engagement.</string>
    <string name="continue_btn">Continue</string>
</resources>